--- a/finch/templates/finch/move-confirm.html
+++ b/finch/templates/finch/move-confirm.html
@@ -1,6 +1,6 @@
 {% extends template %}
 {% load i18n %}
-{% load sitemanagertags %}
+{% load finchtags %}
 {% block content %}
 <h2>{% trans 'Move page' %}</h2>
   {% if page.is_root %}
