--- a/finch/templates/finch/delete.html
+++ b/finch/templates/finch/delete.html
@@ -1,6 +1,6 @@
 {% extends template %}
 {% load i18n %}
-{% load sitemanagertags %}
+{% load finchtags %}
 {% block content %}
 <h2>{% trans "Delete Page" %}</h2>
 {% if page.is_root %}
