--- a/finch/templates/finch/finch_sitemap.html
+++ b/finch/templates/finch/finch_sitemap.html
@@ -1,6 +1,6 @@
 {% extends template %}
 {% load i18n %}
-{% load sitemanagertags %}
+{% load finchtags %}
 {% block content %}
 <h2>{% trans 'Sitemap' %}</h2>
 <div id="treecontrol"></div>
@@ -9,17 +9,17 @@
   {% if structure.new_level %}<ul style="background-color: transparent;"><li>{% else %}</li><li>{% endif %}
       <a href="{{ p.get_absolute_url }}">{{ p.title }}</a>
       {# only show this part when user is_editor here #}
-      {% if perms.sitemanager %}
+      {% if perms.finch %}
       [
       {% if p.online %}Online{% else %}Offline{% endif %} |
       {% if p.restricted %}Restricted
       {% if p.groups.all %}
-      ({% ifequal template "sitemanager/ajax.html"%}
+      ({% ifequal template "finch/ajax.html"%}
       <a href="#"><span class="sitemapellipsis">&hellip;</span>
         {% endifequal %}
         <span class="sitemapgroups">{% for g in p.groups.all %}
           {{ g }}{% if not forloop.last %}, {% endif %}{% endfor %}</span>
-        {% ifequal template "sitemanager/ajax.html"%}
+        {% ifequal template "finch/ajax.html"%}
       </a>
       {% endifequal %}
       )
@@ -30,7 +30,7 @@
       {% endif %}
       {% for level in structure.closed_levels %}</li></ul>{% endfor %}
   {% endfor %}{% endspaceless %}
-  {% ifequal template 'sitemanager/ajax.html' %}
+  {% ifequal template 'finch/ajax.html' %}
   <a class="smcancel" href="/">{% trans 'Close window' %}</a>
   {% endifequal %}
 </div>
@@ -49,7 +49,6 @@
         $(this).hide();
         $('.sitemap .sitemapellipsis').show();
       });
-
   });
 </script>
 {% endblock %}
