--- a/finch/templates/finch/order.html
+++ b/finch/templates/finch/order.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block content %}
 <h2>{% trans 'Change page-order' %}</h2>
-<div id="sitemanager-pageorder" style="text-align:center; width: 200px;">
+<div id="finch-pageorder" style="text-align:center; width: 200px;">
   <form class="smform" action="{% url order_pages page.id %}" method="post">
     {% csrf_token %}
     <select name="sibindex" size="8">{% for p in siblings %}
@@ -12,7 +12,7 @@
     <input type="submit" name="direction" value="{% trans 'Up' %}">
     <input type="submit" name="direction" value="{% trans 'Down' %}">
     <br />
-    {% ifequal template 'sitemanager/ajax.html' %}
+    {% ifequal template 'finch/ajax.html' %}
     <a class="smcancel" href="/">{% trans 'Close window' %}</a>
     {% endifequal %}
   </form>
@@ -24,7 +24,7 @@
           document.location.reload(true);
         }]
     };
-    $('#sitemanager-pageorder').sitemanager(options);
+    $('#finch-pageorder').finch(options);
   });
 </script>
 {% endblock %}
