--- a/finch/templates/registration/login.html
+++ b/finch/templates/registration/login.html
@@ -1,49 +1,41 @@
 {% extends 'contentmanager/contentmanager_base.html' %}
-{% load i18n sitemanagertags %}
+{% load i18n %}
 {% block extrahead %}
 {{ block.super }}
 <style type="text/css">
-label {
-    display: block;
-}
+  label {
+  display: block;
+  }
 </style>
 {% endblock %}
 {% block content %}
-<div id="breadcrumbs">
-  {% trans "You are here:" %} <a href="/">{{ "/"|get_page_title }}</a> &rarr; Login
-</div>
-<div class="colmask fullpage">
-  <div class="col1">
-    <h2>Log in</h2>
-    {% if error_message %}
-    <p class="errornote">{{ error_message }}</p>
-    {% endif %}
-    <form action="{{ app_path }}" method="post" id="login-form">
-      {% csrf_token %}
-      <div class="form-row">
-        <label for="id_username">{% trans 'Username:' %}</label> <input type="text" name="username" id="id_username" />
-        
-      </div>
-      <div class="form-row">
-        <label for="id_password">{% trans 'Password:' %}</label> <input type="password" name="password" id="id_password" />
-        <input type="hidden" name="this_is_the_login_form" value="1" />
-        <input type="hidden" name="post_data" value="{{ post_data }}" />
-        {% if next %}
-        <input type="hidden" name="next" value="{{ next }}" />
-        {% else %}
-        <input type="hidden" name="next" value="/" />
-        {% endif %}
-        <!--{#<span class="help">{% trans 'Have you <a href="/password_reset/">forgotten your password</a>?' %}</span>-->
-      </div>
-      
-      <div class="submit-row">
-        <label>&nbsp;</label><input type="submit" value="{% trans 'Log in' %}" />
-      </div>
-    </form>
-      
-    <script type="text/javascript">
-      document.getElementById('id_username').focus()
-    </script>
+<h2>Log in</h2>
+{% if error_message %}
+<p class="errornote">{{ error_message }}</p>
+{% endif %}
+<form action="{{ app_path }}" method="post" id="login-form">
+  {% csrf_token %}
+  <div class="form-row">
+    <label for="id_username">{% trans 'Username:' %}</label> <input type="text" name="username" id="id_username" />
   </div>
-</div>
+  <div class="form-row">
+    <label for="id_password">{% trans 'Password:' %}</label> <input type="password" name="password" id="id_password" />
+    <input type="hidden" name="this_is_the_login_form" value="1" />
+    <input type="hidden" name="post_data" value="{{ post_data }}" />
+    {% if next %}
+    <input type="hidden" name="next" value="{{ next }}" />
+    {% else %}
+    <input type="hidden" name="next" value="/" />
+    {% endif %}
+    <!--{#<span class="help">{% trans 'Have you <a href="/password_reset/">forgotten your password</a>?' %}</span>-->
+  </div>
+
+  <div class="submit-row">
+    <label>&nbsp;</label><input type="submit" value="{% trans 'Log in' %}" />
+  </div>
+</form>
+
+<script type="text/javascript">
+  document.getElementById('id_username').focus()
+</script>
 {% endblock %}
