--- a/finch/static/finch/css/finch.css
+++ b/finch/static/finch/css/finch.css
@@ -4,7 +4,7 @@
 
 #menumanager { padding: .5em 1em; background-color: #ccc;}
 
-#sitemanager { float : left; }
+#finch { float : left; }
 #contentmanager { float : right; }
 
 .smform form p {
